--- a/index.html
+++ b/index.html
@@ -138,47 +138,47 @@
 
 	<ul>
 		<li>
-			<div><img src="sample/네오.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/네오.webp"></div>
 			<p>네오</p>
 			<span>150</span>
 		</li>
 		<li>
-			<div><img src="sample/라이언.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/라이언.webp"></div>
 			<p>라이언</p>
 			<span>400</span>
 		</li>
 		<li>
-			<div><img src="sample/무지.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/무지.webp"></div>
 			<p>무지</p>
 			<span>210</span>
 		</li>
 		<li>
-			<div><img src="sample/어피치.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/어피치.webp"></div>
 			<p>어피치</p>
 			<span>480</span>
 		</li>
 		<li>
-			<div><img src="sample/제이지.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/제이지.webp"></div>
 			<p>제이지</p>
 			<span>460</span>
 		</li>
 		<li>
-			<div><img src="sample/춘식이.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/춘식이.webp"></div>
 			<p>춘식이</p>
 			<span>500</span>
 		</li>
 		<li>
-			<div><img src="sample/콘.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/콘.webp"></div>
 			<p>콘</p>
 			<span>100</span>
 		</li>
 		<li>
-			<div><img src="sample/튜브.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/튜브.webp"></div>
 			<p>튜브</p>
 			<span>200</span>
 		</li>
 		<li>
-			<div><img src="sample/프로도.webp"></div>
+			<div><img src="https://sgj4958.github.io/cssCarousel/sample/프로도.webp"></div>
 			<p>프로도</p>
 			<span>700</span>
 		</li>
